--- a/scss/components/table/_table.scss
+++ b/scss/components/table/_table.scss
@@ -120,7 +120,6 @@ div.dataTables_wrapper div.dataTables_info {
   
   @include breakpoint(tab992) {
     padding-top: length(35);
-    @include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(24, 16));
   }
 }
 
@@ -137,15 +136,16 @@ div.dataTables_wrapper div.dataTables_paginate {
     @include radius(4);  
     gap: length(1);
     overflow: hidden;
+    margin: 0 !important;
   
     .page-item {
       .page-link {
         border: 0;
         border-radius: 0;
-        padding: length(8) length(24);
+        padding: length(8) length(16);
         @include setBgColor($white, $primary);
         @include border-single(right, solid, 1, $paginstionborder);
-        @include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(24, 16));
+        @include font-face($primaryFont, style('normal'), size(14), weight('normal'), line-height(21, 14));
   
         &:focus {
           box-shadow: none;
@@ -171,7 +171,7 @@ div.dataTables_wrapper div.dataTables_paginate {
           font-size: 0;
           color: transparent;
           position: relative;
-          min-height: length(40);
+          min-height: length(37);
 
           &::before {
             position: absolute;
