--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -11,10 +11,10 @@ $itemhover: hsl(229, 78%, 95%); //#e7ebfc
 =======================================================**/
 $textprimary: hsl(221, 31%, 20%); //#232D42
 $secondarytext: hsl(223, 14%, 60%); //#8A92A6
-$secondarytext: hsl(223, 14%, 60%); //#8A92A6
 $textlight: hsl(224, 13%, 84%); //#D0D3DB
 $headingtext: hsl(224, 10%, 46%); //#6A7081
 $danger: hsl(0, 96%, 67%); //#FC5A5A
+$textdark: hsl(0, 0%, 20%); //#333333
 
 /**=====================================================**
                     BACKGROUND-COLORS
