--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2664,7 +2664,7 @@ select {
 
 .main .tableinfo-header .tablefilter-body .formfilter .inputbox .btn-reset {
   position: absolute;
-  top: 29%;
+  top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 1.875rem;
@@ -2686,6 +2686,10 @@ select {
 .main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .inputfield,
 .main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .selectfield {
   border-color: #fc5a5a;
+}
+
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .btn-reset {
+  top: 29%;
 }
 
 .main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .error-message {
