--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -21,6 +21,7 @@ $textdark: hsl(0, 0%, 20%); //#333333
 =======================================================**/
 $iconbg: hsl(228, 33%, 97%); //#F5F6FA
 $bodybg: hsl(210, 16%, 93%); //#E9ECEF
+$inputbg: hsl(0, 0%, 97%); //#f7f7f7
 
 /**=====================================================**
                     BORDER-COLORS
